[BUGFIX] Fix megamenu alignment

--- a/Resources/Public/Scss/Theme/_megamenu.scss
+++ b/Resources/Public/Scss/Theme/_megamenu.scss
@@ -12,6 +12,7 @@
     display: block;
     & > .navbar-link{
       min-height: $navbar-height;
+      height: 100%;
     }
 
     .navbar-dropdown {
